Content and relationship management

--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,21 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "draft-js": "^0.11.7",
+    "interweave": "^13.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-icons": "^5.0.1",
+    "react-katex": "^3.0.1",
+    "react-quill": "^2.0.0",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "react-trix": "^0.10.2",
+    "slate-history": "^0.100.0",
+    "slate-react": "^0.102.0",
+    "slick-carousel": "^1.8.1",
+    "trix": "^2.0.10"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
