--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "dompurify": "^3.0.11",
     "draft-js": "^0.11.7",
     "interweave": "^13.1.0",
     "prop-types": "^15.8.1",
